--- a/docs/spec/components/schemas/Order.yaml
+++ b/docs/spec/components/schemas/Order.yaml
@@ -35,6 +35,7 @@ allOf:
               data:
                 $ref: '#/components/schemas/CustomerKey'
           staff:
+            description: "Order staff fKey"
             type: object
             required:
               - data
